fix: Configure code coverage for SonarQube analysis
- Add coverage report generation in phpunit.xml
- Configure SonarQube to read coverage from clover.xml
- Update CI workflows to upload coverage artifacts
- Add coverage directories to .gitignore
- Use full SHA hash for GitHub Actions (security fix)

Resolves: Coverage on New Code 0.0%
Resolves: Security hotspot - unverified GitHub Actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,10 +35,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+        uses: shivammathur/setup-php@6d7209f44a25a59e904b1ee9f3b0c33ab2cd888d # v2.31.0
         with:
           php-version: ${{ matrix.php }}
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, fileinfo
@@ -65,7 +65,7 @@ jobs:
         run: php artisan test --testsuite=${{ matrix.test-suite }} --coverage --min=80
 
       - name: Upload Test Results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
         if: always()
         with:
           name: test-results-php-${{ matrix.php }}-${{ matrix.test-suite }}
