--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,19 @@
 sonar.projectKey=Kelompok-Devops_website-catatan-sederhana
 sonar.organization=kelompok-devops
 
+# Source code configuration
+sonar.sources=app,database,routes
+sonar.tests=tests
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=website-catatan-sederhana
-#sonar.projectVersion=1.0
+# Exclude vendor and other unnecessary directories
+sonar.exclusions=vendor/**,storage/**,bootstrap/cache/**,public/**,node_modules/**,resources/**
 
+# PHP specific settings
+sonar.language=php
+sonar.sourceEncoding=UTF-8
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Coverage report path (Clover format)
+sonar.php.coverage.reportPaths=coverage/clover.xml
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Test execution report (optional but recommended)
+sonar.php.tests.reportPath=coverage/test-report.xml
