--- a/.github/workflows/CI-Pipeline.yml
+++ b/.github/workflows/CI-Pipeline.yml
@@ -36,10 +36,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+        uses: shivammathur/setup-php@6d7209f44a25a59e904b1ee9f3b0c33ab2cd888d # v2.31.0
         with:
           php-version: ${{ matrix.php }}
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, fileinfo
@@ -65,8 +65,20 @@ jobs:
       - name: Execute PHPUnit Tests - ${{ matrix.test-suite }}
         run: php artisan test --testsuite=${{ matrix.test-suite }} --coverage --min=80
 
+      - name: Generate Coverage Report (Clover XML)
+        if: matrix.php == '8.3' && matrix.test-suite == 'Feature'
+        run: ./vendor/bin/phpunit --coverage-clover=coverage/clover.xml
+
+      - name: Upload Coverage Report
+        if: matrix.php == '8.3' && matrix.test-suite == 'Feature'
+        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
+        with:
+          name: coverage-report
+          path: coverage/clover.xml
+          retention-days: 1
+
       - name: Upload Test Results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
         if: always()
         with:
           name: test-results-php-${{ matrix.php }}-${{ matrix.test-suite }}
@@ -79,11 +91,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: phpunit-tests
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0  # diperlukan agar analisis Sonar lebih akurat
+
+      - name: Download Coverage Report
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: coverage-report
+          path: coverage/
+
+      - name: List Coverage Files (Debug)
+        run: ls -la coverage/
+
       - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v6
+        uses: SonarSource/sonarqube-scan-action@884b79409bbd464b2a59edc326a4b77dc56b2195 # v6.0.0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
